--- a/index.html
+++ b/index.html
@@ -5,15 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Team Grape</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
 </head>
 <body>
-    
-<h1> This is just a test</h1>
-
-
-<script>
-
-</script>
-
+  <div class="container v-height">
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-12 text-center">
+          <h4>The Amazing Game</h4>
+            <div class="col-lg-12 col-md-12 col-xs-12">
+              <div class="form-group text-center">
+                <h4>UserName</h4>
+                <input type="text" class="form-control col-lg-4 mx-auto" placeholder="type your username here">
+                <h4>Password</h4>
+                <input type="text" class="form-control col-lg-4 mx-auto" placeholder="type your username here">
+                <button type="butotn" class="btn btn-default">Login</button>
+              </div>
+            <a href="#" role="button">Rules about games</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
 </body>
 </html>
