added registration page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <h4>UserName</h4>
                 <input type="text" class="form-control col-lg-4 mx-auto" placeholder="type your username here">
                 <h4>Password</h4>
-                <input type="text" class="form-control col-lg-4 mx-auto" placeholder="type your username here">
+                <input type="password" class="form-control col-lg-4 mx-auto" placeholder="type your username here">
                 <button type="butotn" class="btn btn-default">Login</button>
               </div>
             <a href="#" role="button">Rules about games</a>
