--- a/index.html
+++ b/index.html
@@ -9,25 +9,66 @@
     <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
 </head>
 <body>
-  <div class="container v-height">
-    <div class="container-fluid">
+  <div class="col-lg-12 col-xs-12 container v-height">
+    <div class="col-lg-6" style="border:1px solid red">
+        <img class="col-lg-6 img-fluid center mx-auto d-block" alt="Logotyp" src="IMG/logo.png"/>
+        <div class="text-center">
+        <h4>The Amazing Game</h4>
+        <a href="#" role="button">Rules about games </a><i>|</i>
+        <a href="#" role="button">Signup</a>
+    </div>
+    </div>
+    <div class="col-lg-6 col-md-12 v-height" style="border:1px solid red">
       <div class="row">
-        <div class="col-12 text-center">
-          <h4>The Amazing Game</h4>
+        <div class="text-center">
+          <h4>Login Here</h4>
             <div class="col-lg-12 col-md-12 col-xs-12">
-              <div class="form-group text-center">
-                <h4>UserName</h4>
-                <input type="text" class="form-control col-lg-4 mx-auto" placeholder="type your username here">
-                <h4>Password</h4>
-                <input type="text" class="form-control col-lg-4 mx-auto" placeholder="type your username here">
-                <button type="butotn" class="btn btn-default">Login</button>
-              </div>
-            <a href="#" role="button">Rules about games</a>
+              <div class="vh-height">
+              <form>
+                <div class="col-lg-12 form-group">
+                    <input type="text" class="form-control" placeholder="Username">
+                </div>
+                <div class="col-lg-12 col-sm-12 col-xs-12 form-group">
+                    <input type="password" class="form-control" placeholder="Password">
+                </div>   
+                </form>
+                </div>                 
+                <button type="submit" class="btn btn-success ">Let's play!</button>
+                </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
+
+    <!-- <div class="col-lg-6 container v-height">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 text-center">
+              <img class="img-fluid" alt="Logotyp" src="IMG/logo.png"/>
+              <h4>The Amazing Game</h4>
+                <div class="col-lg-12 col-md-12 col-xs-12">
+                  <div class="vh-height">
+                  <form>
+                    <div class="col-lg-12 form-group">
+                        <input type="text" class="form-control" placeholder="Username">
+                    </div>
+                    <div class="col-lg-12 col-sm-12 col-xs-12 form-group">
+                        <input type="password" class="form-control" placeholder="Password">
+                    </div>   
+                    </form>
+                    </div>                 
+                    <button type="submit" class="btn btn-success ">Let's play!</button>
+                    </div>
+                <a href="#" role="button">Rules about games </a><i>|</i>
+                <a href="#" role="button">Register</a>
+              </div>
+            </div>
+          </div>
+        </div> -->
+
+  
+
+  
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
