--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
 </head>
 <body>
-  <div class="col-lg-12 col-xs-12 container v-height">
-    <div class="col-lg-6" style="border:1px solid red">
+  <div class="col-lg-12 col-xs-12 container-fluid v-height">
+    <div class="col-lg-6 col-md-6">
         <img class="col-lg-6 img-fluid center mx-auto d-block" alt="Logotyp" src="IMG/logo.png"/>
         <div class="text-center">
         <h4>The Amazing Game</h4>
@@ -18,7 +18,7 @@
         <a href="#" role="button">Signup</a>
     </div>
     </div>
-    <div class="col-lg-6 col-md-12 v-height" style="border:1px solid red">
+    <div class="bg-color col-lg-6 col-md-6 v-height">
       <div class="row">
         <div class="text-center">
           <h4>Login Here</h4>
