--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div class="col-12 text-center">
           <h4>The Amazing Game</h4>
             <div class="col-lg-12 col-md-12 col-xs-12">
-              <div class="form-group text-center">
+              <div class="form-group text-center" id="loginForm">
                 <h4>UserName</h4>
-                <input type="text" class="form-control col-lg-4 mx-auto" placeholder="type your username here">
+                <input type="text" id="username" class="form-control col-lg-4 mx-auto" placeholder="type your username here">
                 <h4>Password</h4>
-                <input type="text" class="form-control col-lg-4 mx-auto" placeholder="type your username here">
-                <button type="butotn" class="btn btn-default">Login</button>
+                <input type="text" id="password" class="form-control col-lg-4 mx-auto" placeholder="type your password here">
+                  <button type="butotn" id="loginbtn" class="btn btn-default" onclick="check()">Login</button>
               </div>
             <a href="#" role="button" data-toggle="modal" data-target="#exampleModalLong">Rules about games</a>
           </div>
@@ -50,6 +50,7 @@
     </div>
   </div>
 </div>
+<script src="JS/script.js"></script>    
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
