--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <input type="text" class="form-control" placeholder="Username">
                 </div>
                 <div class="col-lg-12 col-sm-12 col-xs-12 form-group">
-                    <input type="password" class="form-control" placeholder="Password">
+                <input type="password" class="form-control" placeholder="Password">
                 </div>   
                 </form>
                 </div>                 
@@ -44,6 +44,7 @@
 
 
 <!-- Modal -->
+<!-- Rules about the games -->
 <div class="modal fade" id="exampleModalLong" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
