Create a img for the map

--- a/startpage.html
+++ b/startpage.html
@@ -13,8 +13,8 @@
         <div class="row">
             <div class="col-lg-12">
                 <h4 class="text-center">The Amazing Game</h4>
-                <input class="col-xs-12 form-control"  type="text" placeholder="Choose team">
-                <select class="col-xs-12 form-control">
+                <input class="col-sm-4 offset-lg-4 offset-sm-4 form-control"  type="text" placeholder="Choose team">
+                <select class="col-sm-4 offset-lg-4 offset-sm-4 form-control">
                 <option>Player</option>
                 <option>Player 1</option>
                 <option>Player 2</option>
@@ -24,8 +24,8 @@
         </div>
     </div>
 
-    <div class="container startPageBottom">
-
+    <div class="container-fluid startPageBottom">
+        
     </div>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
