--- a/startpage.html
+++ b/startpage.html
@@ -13,7 +13,10 @@
         <div class="row">
             <div class="col-lg-12">
                 <h4 class="text-center">The Amazing Game</h4>
-                <input class="col-sm-4 offset-lg-4 offset-sm-4 form-control"  type="text" placeholder="Choose team">
+                <div class="form-inline">
+                    <input class="col-sm-4 offset-lg-4 offset-sm-4 form-control"  type="text" placeholder="Choose team">
+                    <button type="button" class="btn btn-success">Save</button>
+                </div>
                 <select class="col-sm-4 offset-lg-4 offset-sm-4 form-control">
                 <option>Player</option>
                 <option>Player 1</option>
