--- a/startpage.html
+++ b/startpage.html
@@ -11,15 +11,15 @@
 <body>
     <div class="container-fluid startPageTop">
         <div class="row">
-            <div class="col-lg-12">
-                <h4 class="text-center">The Amazing Game</h4>
-                <input class="col-xs-12 form-control"  type="text" placeholder="Choose team">
-                <select class="col-xs-12 form-control">
-                <option>Player</option>
-                <option>Player 1</option>
-                <option>Player 2</option>
-                <option>Player 3</option>
-                </select>
+            <div class="col-sm-12">
+              <h4 class="text-center">The Amazing Game</h4>
+              <input class="col-xs-12 col-sm-6 offset-sm-3 col-lg-4 offset-lg-4 form-control"  type="text" placeholder="Choose team">
+              <select class="col-xs-12 col-sm-6 offset-sm-3 col-lg-4 offset-lg-4 form-control">
+              <option>Player</option>
+              <option>Player 1</option>
+              <option>Player 2</option>
+              <option>Player 3</option>
+              </select>
             </div>
         </div>
     </div>
@@ -30,5 +30,5 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
-</body> 
+</body>
 </html>
