--- a/startpage.html
+++ b/startpage.html
@@ -12,17 +12,18 @@
     <div class="container-fluid startPageTop">
         <div class="row">
             <div class="col-lg-12">
-                <h4 class="text-center">The Amazing Game</h4>
+                <h4 class="text-center mb-3 mt-5">The Amazing Game</h4>
                 <div class="form-inline">
                     <input class="col-sm-4 offset-lg-4 offset-sm-4 form-control"  type="text" placeholder="Choose team">
-                    <button type="button" class="btn btn-success">Save</button>
+                    <button type="button" class="btn btn-success ml-2">Save</button>
                 </div>
-                <select class="col-sm-4 offset-lg-4 offset-sm-4 form-control">
-                <option>Player</option>
+                <select class="col-sm-4 offset-lg-4 offset-sm-4 form-control mt-2">
+                <option value="" hidden>Choose player</option>
                 <option>Player 1</option>
                 <option>Player 2</option>
                 <option>Player 3</option>
                 </select>
+                <button type="submit" class="col-sm-4 col-lg-4 offset-sm-4 btn btn-success mt-2">Let's play!</button>
             </div>
         </div>
     </div>
