--- a/Taking-Google-Maps-Further-master/tutorial1_activity3_creating_your_first_map.html
+++ b/Taking-Google-Maps-Further-master/tutorial1_activity3_creating_your_first_map.html
@@ -157,6 +157,7 @@ getLocation();
 </head>
 <body>
      <!--Create the div to hold the map.-->
-    <div id="festival-map"></div>
+	<div id="festival-map"></div>
+	<button onclick(getLocation())></button>
 </body>
 </html>
