--- a/Taking-Google-Maps-Further-master/tutorial1_activity3_creating_your_first_map.html
+++ b/Taking-Google-Maps-Further-master/tutorial1_activity3_creating_your_first_map.html
@@ -158,6 +158,6 @@ getLocation();
 <body>
      <!--Create the div to hold the map.-->
 	<div id="festival-map"></div>
-	<button onclick(getLocation())></button>
+	<button onclick(getLocation())>Get Location</button>
 </body>
 </html>
