--- a/startpage.html
+++ b/startpage.html
@@ -7,8 +7,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
+	    <link rel="stylesheet" type="text/css" href="CSS/menu.css" />
 </head>
 <body>
+<nav role="navigation">
+    <div id="menuToggle">
+      <!--
+      A fake / hidden checkbox is used as click reciever,
+      so you can use the :checked selector on it.
+      -->
+      <input type="checkbox"/>
+      <span></span>
+      <span></span>
+      <span></span>
+      
+      <ul id="menu">
+        <a href="#"><li>Leaderboard</li></a>
+        <a href="#"><li>Join a Team</li></a>
+        <a href="#"><li>Create a Team</li></a>
+        <a href="#"><li>Settings</li></a>
+        <a href="#"><li>Help</li></a>
+        <a href="index.html"><li>Logut</li></a>
+      </ul>
+    </div>
+  </nav>
+
     <div class="container-fluid startPageTop">
         <div class="row">
             <div class="col-lg-12">
