--- a/startpage.html
+++ b/startpage.html
@@ -35,18 +35,15 @@
     <div class="container-fluid startPageTop">
         <div class="row">
             <div class="col-lg-12">
-                <h4 class="text-center mb-3 mt-5">The Amazing Game</h4>
-                <div class="form-inline">
-                    <input class="col-xs-12 col-sm-6 offset-sm-3 col-lg-4 offset-lg-4 form-control"  type="text" placeholder="Choose team">
-                    <button type="button" class="btn btn-success ml-2">Save</button>
+                <h2 class="text-center mb-3 mt-5">The Amazing Game</h2>
+                <div class="input-group">
+                    <input type="text" class="col-lg-4 offset-lg-4 form-control" placeholder="Create team">
+                    <div class="input-group-append">
+                        <button class="btn btn-success" type="button">Create</button>
+                    </div>
                 </div>
-                <select class="col-xs-12 col-sm-6 offset-sm-3 col-lg-4 offset-lg-4 form-control mt-2">
-                <option value="" hidden>Choose player</option>
-                <option>Player 1</option>
-                <option>Player 2</option>
-                <option>Player 3</option>
-                </select>
-                <button type="submit" class="col-sm-4 col-lg-4 offset-sm-4 btn btn-success mt-2">Let's play!</button>
+                <br>
+                <button class="btn btn-success mx-auto d-block" type="button">Join Team</button>
             </div>
         </div>
     </div>
