Fixed z-index on button

--- a/startpage.html
+++ b/startpage.html
@@ -65,7 +65,7 @@
                     </div>
                 </div>
                 <br>
-                <button class="btn btn-success mx-auto d-block" type="button">Join Team</button>
+                <button class="btn btn-success mx-auto d-block mb-5" type="button">Join Team</button>
             </div>
         </div>
     </div>
