--- a/startpage.html
+++ b/startpage.html
@@ -23,7 +23,7 @@
       
       <ul id="menu">
         <a href="#"><li>Leaderboard</li></a>
-        <a href="#"><li>Join a Team</li></a>
+        <a href="#" role="button" data-toggle="modal" data-target="#joinTeam"><li>Join a Team</li></a>
         <a href="#"><li>Create a Team</li></a>
         <a href="#"><li>Settings</li></a>
         <a href="#"><li>Help</li></a>
@@ -50,10 +50,30 @@
             </div>
         </div>
     </div>
-
+    <div class="modal fade" id="joinTeam" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="joinTeam">Join a team</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+                <input class="col-12 form-control" id="codeInput" type="text" placeholder="Enter code">
+                <br/>
+                <button type="button" class="btn btn-success m4" id="codeGenerator">Apply code</button>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
     <div class="container-fluid startPageBottom">
 
     </div>
+<script src="JS/codeGenerator.js"></script>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
