add player list with tab boostrap 4

--- a/joinplayer.html
+++ b/joinplayer.html
@@ -6,14 +6,48 @@
     <title>JoinedPlayers</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">
-</head>
+    </head>
 <body>
+<section>
+    <div class="container-fluid">
+        <ul class="nav nav-tabs" role="tablist">
+            <li class="nav-item">
+                <a class="nav-link active" data-toggle="tab" href="#players" role="tab">Joined players</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" data-toggle="tab" href="#request" role="tab">Requests</a>
+            </li>
+        </ul>
+        <div class="tab-content">
+                <div class="tab-pane fade show active" id="players" role="tabpanel">
+                    <div class="">
+                            <ul  id ="yourteam" class="list-group">
+                                <li class="list-group-item"><i class="fa fa-user"></i> Player 1</li>
+                                <li class="list-group-item"><i class="fa fa-user"></i> Player 2</li>
+                                <li class="list-group-item"><i class="fa fa-user"></i> Player 3</li>
+                                <li class="list-group-item"><i class="fa fa-user"></i> Player 4</li>
+                                <li class="list-group-item"><i class="fa fa-user"></i> Player 5</li>
+                            </ul>
+                        </div><br>
+                        <button type="button" class="btn btn-primary mx-auto d-block">Search Opponent</button>
+                    </div>
+                    <div class="tab-pane fade" id="request" role="tabpanel"><h1>Teams </h1></div>
+                </div>
+                
+    </div>
     
-
+</section>
 
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.0.4/js/all.js"></script>
+    <script>
+        $('#myTab a').click(function (e) {
+  e.preventDefault()
+  $(this).tab('show')
+})
+    </script>
 </body>
-</html>>
+</html>
