minor fix menu staging

--- a/startpage.html
+++ b/startpage.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
 	    <link rel="stylesheet" type="text/css" href="CSS/menu.css" />
 </head>
-<body>
+<body style="overflow-y:hidden">
 <nav role="navigation">
     <div id="menuToggle">
       <!--
