--- a/startpage.html
+++ b/startpage.html
@@ -27,7 +27,7 @@
         <a href="#"><li>Create a Team</li></a>
         <a href="#"><li>Settings</li></a>
         <a href="#" role="button" data-toggle="modal" data-target="#rulesAbout"><li>Help</li></a>
-        <a href="index.html"><li>Logut</li></a>
+        <a href="index.html"><li>Logout</li></a>
       </ul>
     </div>
   </nav>
