theme change on joinplayers.html

--- a/joinplayer.html
+++ b/joinplayer.html
@@ -42,7 +42,7 @@
     <div class="container-fluid" >
         <div class="col-sm-4 col-xs-12 mx-auto d-block">
             <p class="text-center">Share this code to join the team</p>
-            <h3 id="myInput" class="bg-primary text-center rounded" onClick="myFunction()">1552142205</h3>
+            <h3 id="myInput" class="border text-center rounded" onClick="myFunction()">1552142205</h3>
         </div>
 
         <ul class="nav nav-tabs" role="tablist">
