--- a/startpage.html
+++ b/startpage.html
@@ -23,8 +23,7 @@
       
       <ul id="menu">
         <a href="#"><li>Leaderboard</li></a>
-        <a href="#"><li>Join a Team</li></a>
-        <a href="#"><li>Create a Team</li></a>
+        <a href="joinplayer.html"><li>Join a Team</li></a>
         <a href="#"><li>Settings</li></a>
         <a href="#" role="button" data-toggle="modal" data-target="#rulesAbout"><li>Help</li></a>
         <a href="index.html"><li>Logout</li></a>
