fixed menu, and some theme colors

--- a/joinplayer.html
+++ b/joinplayer.html
@@ -30,7 +30,6 @@
                 <ul id="menu">
                     <a href="#"><li>Leaderboard</li></a>
                     <a href="#"><li>Join a Team</li></a>
-                    <a href="#"><li>Create a Team</li></a>
                     <a href="#"><li>Settings</li></a>
                     <a href="#" role="button" data-toggle="modal" data-target="#rulesAbout"><li>Help</li></a>
                     <a href="index.html"><li>Logout</li></a>
@@ -41,7 +40,7 @@
 <section class="d-flex align-items-center" style="height: 100vh;">
     <div class="container-fluid" >
         <div class="col-sm-4 col-xs-12 mx-auto d-block">
-            <p class="text-center">Share this code to join the team</p>
+            <p class="text-center text-white">Share this code to join the team</p>
             <h3 id="myInput" class="border text-center rounded" onClick="myFunction()">1552142205</h3>
         </div>
 
@@ -64,7 +63,7 @@
                                 <li class="list-group-item"><i class="fa fa-user"></i> Player 5</li>
                             </ul>
                         </div><br>
-                        <button type="button" class="btn btn-primary mx-auto d-block">Search Opponent</button>
+                        <button type="button" class="btn btn-success mx-auto d-block">Search Opponent</button>
                     </div>
                     <div class="tab-pane fade" id="request" role="tabpanel"><h1>Teams </h1></div>
                 </div>
