adding exit game button and fixing cellphone layout

--- a/joinplayer.html
+++ b/joinplayer.html
@@ -14,7 +14,7 @@
         background-color: #8094E5;
     }
 </style>
-<body>
+<body style="overflow:hidden">
     <!-- navbar at the top left -->
     <nav role="navigation">
             <div id="menuToggle">
@@ -36,8 +36,11 @@
                 </ul>
         </div>
     </nav>
+                        <button type="button" class="hej btn btn-danger mx-auto d-block float-right pull-right">Quit game</button>
+						
 
 <section class="d-flex align-items-center" style="height: 100vh;">
+
     <div class="container-fluid" >
         <div class="col-sm-4 col-xs-12 mx-auto d-block">
             <p class="text-center text-white">Share this code to join the team</p>
@@ -63,7 +66,7 @@
                                 <li class="list-group-item"><i class="fa fa-user"></i> Player 5</li>
                             </ul>
                         </div><br>
-                        <button type="button" class="btn btn-success mx-auto d-block">Search Opponent</button>
+                        <button type="button" class="btn btn-success1 mx-auto d-block">Search Opponent</button>
                     </div>
                     <div class="tab-pane fade" id="request" role="tabpanel"><h1>Teams </h1></div>
                 </div>
