--- a/startpage.html
+++ b/startpage.html
@@ -60,11 +60,11 @@
                 <div class="input-group">
                     <input type="text" class="col-lg-4 offset-lg-4 form-control" placeholder="Create team">
                     <div class="input-group-append">
-                        <button class="btn btn-success" type="button">Create</button>
+                        <button class="btn btn-success1" type="button">Create</button>
                     </div>
                 </div>
                 <br>
-                <button class="btn btn-success mx-auto d-block mb-5" type="button">Join Team</button>
+                <button class="btn btn-success1 mx-auto d-block mb-5" type="button">Join Team</button>
             </div>
         </div>
     </div>
