Fixed border and line height

--- a/joinplayer.html
+++ b/joinplayer.html
@@ -36,7 +36,7 @@
                 </ul>
         </div>
     </nav>
-                        <button type="button" class="hej btn btn-danger mx-auto d-block float-right pull-right">Quit game</button>
+                        <button type="button" class="hej btn btn-danger mx-auto d-block float-right pull-right">Quit Game</button>
 						
 
 <section class="d-flex align-items-center" style="height: 100vh;">
@@ -45,7 +45,7 @@
         <div class="col-sm-4 col-xs-12 mx-auto d-block">
             <p class="text-center text-white">Share this code to join the team</p>
             <h3 id="myInput" class="border text-center rounded" onClick="myFunction()">1552142205</h3>
-        </div>
+        </div><br>
 
         <ul class="nav nav-tabs" role="tablist">
             <li class="nav-item">
