--- a/joinplayer.html
+++ b/joinplayer.html
@@ -75,7 +75,7 @@ body {
       <div class="tab-content">
           <div class="tab-pane fade show active" id="players" role="tabpanel">
               <div>
-                  <ul id="yourteam" class="list-group" style="min-height: 40vh; overflow: scroll; overflow-x: hidden;">
+                  <ul id="yourteam" class="list-group" style="min-height: 40vh; overflow-y: hidden; overflow-x: hidden;">
                       <li class="list-group-item">
                           <i class="fa fa-user"></i> Player 1</li>
                       <li class="list-group-item">
