--- a/joinplayer.html
+++ b/joinplayer.html
@@ -93,7 +93,7 @@ body {
           </div>
           <div class="tab-pane fade" id="request" role="tabpanel">
               <div>
-                  <ul id="yourteam" class="list-group" style="min-height: 40vh; overflow: scroll; overflow-x: hidden;">
+                  <ul id="yourteam" class="list-group" style="min-height: 40vh; overflow-y:hidden; overflow-x: hidden;">
                       <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
                           <span class="badge badge-primary badge-pill">4</span>
                           <div>
