fixed link to quit button

--- a/joinplayer.html
+++ b/joinplayer.html
@@ -49,7 +49,7 @@ body {
         </ul>
     </div>
 </nav>
-<button type="button" class="hej btn btn-danger mx-auto d-block float-right pull-right">Quit Game</button>
+<button type="button" class="hej btn btn-danger mx-auto d-block float-right pull-right"><a href="startpage.html">Quit Game</a></button>
 
 
 <section class="d-flex align-items-center" style="height: 100vh;">
