--- a/joinplayer.html
+++ b/joinplayer.html
@@ -94,35 +94,35 @@ body {
               <div>
                   <ul id="yourteam" class="list-group" style="min-height: 40vh; overflow-y:hidden; overflow-x: hidden;">
                       <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
-                          <span class="badge badge-primary badge-pill">4</span>
+                          <span class="badge badge-primary badge-pill">4 Players</span>
                           <div>
                               <i class="fas fa-lg fa-check mr-2 green"></i>
                               <i class="fas  fa-lg fa-times red"></i>
                           </div>
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
-                          <span class="badge badge-primary badge-pill">3</span>
+                          <span class="badge badge-primary badge-pill">3 Players</span>
                           <div>
                               <i class="fas fa-lg fa-check mr-2 green"></i>
                               <i class="fas  fa-lg fa-times red"></i>
                           </div>
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
-                          <span class="badge badge-primary badge-pill">2</span>
+                          <span class="badge badge-primary badge-pill">2 Players</span>
                           <div>
                               <i class="fas fa-lg fa-check mr-2 green"></i>
                               <i class="fas  fa-lg fa-times red"></i>
                           </div>
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
-                          <span class="badge badge-primary badge-pill">4</span>
+                          <span class="badge badge-primary badge-pill">4 Players</span>
                           <div>
                               <i class="fas fa-lg fa-check mr-2 green"></i>
                               <i class="fas  fa-lg fa-times red"></i>
                           </div>
                       </li>
                       <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
-                          <span class="badge badge-primary badge-pill">4</span>
+                          <span class="badge badge-primary badge-pill">4 Players</span>
                           <div>
                               <i class="fas fa-lg fa-check mr-2 green"></i>
                               <i class="fas  fa-lg fa-times red"></i>
