Fixing index, and small details with cursor and names

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       <img class="col-lg-6 img-fluid center mx-auto d-block" alt="Logotyp" src="IMG/logo.png"/>
       <div class="text-center">
       <h4>The Amazing Game</h4>
-      <a href="#" role="button" data-toggle="modal" data-target="#rulesAbout">About &amp; Rules </a><i>|</i>
-      <a href="#" role="button" data-toggle="modal" data-target="#signup">Signup</a>
+      <a href="#" class="text-white" role="button" data-toggle="modal" data-target="#rulesAbout">About &amp; Rules | </a>
+      <a href="#" class="text-white" role="button" data-toggle="modal" data-target="#signup">Signup</a>
     </div>
     </div>
     <div class="bg-color col-lg-6 col-md-6 v-height">
@@ -40,20 +40,6 @@
       </div>
     </div>
   </div>
-
-  <div class="form-group">
-    <label class="col-md-4 control-label" for="rolename" mutiple data-max-options="2">Role Name</label>
-    <div class="col-md-4">
-        <select id="dates-field2" class="multiselect-ui form-control" multiple="multiple">
-            <option value="cheese">Cheese</option>
-            <option value="tomatoes">Tomatoes</option>
-            <option value="mozarella">Mozzarella</option>
-            <option value="mushrooms">Mushrooms</option>
-            <option value="pepperoni">Pepperoni</option>
-            <option value="onions">Onions</option>
-        </select>
-    </div>
-</div>
 
 <!-- Modal -->
 <div class="modal fade" id="rulesAbout" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
