--- a/joinplayer.html
+++ b/joinplayer.html
@@ -100,32 +100,32 @@ body {
                               <i class="fas  fa-lg fa-times red"></i>
                           </div>
                       </li>
-                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
+                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 2
                           <span class="badge badge-primary badge-pill">3 Players</span>
                           <div>
                               <i class="fas fa-lg fa-check mr-2 green"></i>
                               <i class="fas  fa-lg fa-times red"></i>
                           </div>
                       </li>
-                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
+                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 3
                           <span class="badge badge-primary badge-pill">2 Players</span>
                           <div>
                               <i class="fas fa-lg fa-check mr-2 green"></i>
                               <i class="fas  fa-lg fa-times red"></i>
                           </div>
                       </li>
-                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
+                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 4
                           <span class="badge badge-primary badge-pill">4 Players</span>
                           <div>
                               <i class="fas fa-lg fa-check mr-2 green"></i>
                               <i class="fas  fa-lg fa-times red"></i>
                           </div>
                       </li>
-                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
+                      <li class="list-group-item d-flex justify-content-between align-items-center">Team 5
                           <span class="badge badge-primary badge-pill">4 Players</span>
                           <div>
-                              <i class="fas fa-lg fa-check mr-2 green"></i>
-                              <i class="fas  fa-lg fa-times red"></i>
+                              <i class="fas fa-lg fa-check mr-2 green" Alt="Accept"></i>
+                              <i class="fas  fa-lg fa-times red" Alt="Red"></i>
                           </div>
                       </li>
                   </ul>
