--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
 </head>
 <body>
-  <div class="col-lg-12 col-xs-12 container-fluid v-height">
+  <div class="col-lg-12 col-xs-12 container-fluid v-height img">
     <div class="col-lg-6 col-md-6">
       <img class="col-lg-6 img-fluid center mx-auto d-block" alt="Logotyp" src="IMG/logo.png"/>
       <div class="text-center">
@@ -20,7 +20,7 @@
     </div>
     <div class="bg-color col-lg-6 col-md-6 v-height">
       <div class="row">
-        <div class="text-center">
+        <div class="text-center loginh4">
           <h4>Login Here</h4>
           <div class="col-lg-12 col-md-12 col-xs-12">
             <div class="vh-height">
@@ -33,7 +33,7 @@
               </div>
               </form>
               </div>
-              <button type="submit" class="btn btn-success" onClick="check()">Let's play!</button>
+              <button type="submit" class="btn btn-success1" onClick="check()">Let's play!</button>
             </div>
           </div>
         </div>
