--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             <div class="vh-height">
             <form>
               <div class="col-lg-12 form-group">
-                <input type="text" class="form-control" placeholder="Username" id="username">
+                <input type="text" class="form-control" placeholder="Username" id="username" required>
               </div>
               <div class="col-lg-12 col-sm-12 col-xs-12 form-group">
-                <input type="password" class="form-control" placeholder="Password" id="password">
+                <input type="password" class="form-control" placeholder="Password" id="password" required>
               </div>
+			   <button type="submit" class="btn btn-success1" onClick="check()">Let's play!</button>
               </form>
               </div>
-              <button type="submit" class="btn btn-success1" onClick="check()">Let's play!</button>
             </div>
           </div>
         </div>
