--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <div class="col-lg-12 col-xs-12 container-fluid v-height img">
-    <div class="col-lg-6 col-md-6">
+    <div class="col-lg-6 col-md-6 mp">
       <img class="col-lg-6 img-fluid center mx-auto d-block" alt="Logotyp" src="IMG/logo.png"/>
       <div class="text-center">
       <h4>The Amazing Game</h4>
