--- a/joinplayer.html
+++ b/joinplayer.html
@@ -11,11 +11,11 @@
 <link rel="stylesheet" type="text/css" href="CSS/stylesheet.css">
 <link rel="stylesheet" type="text/css" href="CSS/menu.css" />
 </head>
-<style>
+<!-- <style>
 body {
     background-color: #8094E5;
 }
-</style>
+</style> -->
 
 <body style="overflow:hidden">
 <!-- navbar at the top left -->
@@ -49,7 +49,7 @@ body {
         </ul>
     </div>
 </nav>
-<button type="button" class="hej btn btn-danger mx-auto d-block float-right pull-right"><a href="startpage.html">Quit Game</a></button>
+<button type="button" class="btn btn-danger mx-auto d-block float-right pull-right"><a href="startpage.html">Quit Game</a></button>
 
 
 <section class="d-flex align-items-center" style="height: 100vh;">
