fixing center icons on text, and color

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -47,8 +47,10 @@
     <section class="d-flex align-items-center" style="height: 100vh;">
 
       <div class="container-fluid">
+	  <div class="player">
         <span class="fa fa-2x fa-user"></span>
-        <h4>Player 1</h4>
+        <h4 class="text-white">Player 1</h4>
+		</div>
         <hr>
         <ul class="nav nav-pills nav-fill">
           <li class="nav-item"><a class="nav-link active" href="#score" data-toggle="tab">Score</a></li>
