fixing leaderboard profile

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -48,13 +48,13 @@
 
       <div class="container-fluid">
 	  <div class="player">
-        <span class="fa fa-2x fa-user"></span>
-        <h4 class="text-white">Player 1</h4>
+        <span class="fa fa-2x fa-user mx-auto d-block"></span>
+        <h4 class="text-white text-center">Player 1</h4>
 		</div>
         <hr>
         <ul class="nav nav-pills nav-fill">
-          <li class="nav-item"><a class="nav-link active" href="#score" data-toggle="tab">Score</a></li>
-          <li class="nav-item"><a class="nav-link" href="#rank" data-toggle="tab">Rank</a></li>
+          <li class="nav-item scoreToggle"><a class="nav-link active" href="#score" data-toggle="tab">Score</a></li>
+          <li class="nav-item rankToggle"><a class="nav-link" href="#rank" data-toggle="tab">Rank</a></li>
         </ul>
         <br>
 
