--- a/joinplayer.html
+++ b/joinplayer.html
@@ -61,7 +61,7 @@ body {
       </div>
       <br>
 
-      <ul class="nav nav-tabs" role="tablist">
+      <ul class="nav nav-tabs nav-justified" role="tablist">
           <li class="nav-item">
               <a class="nav-link active" data-toggle="tab" href="#players" role="tab">Joined players</a>
           </li>
@@ -135,7 +135,7 @@ body {
 
           <div class="tab-pane fade" id="invite" role="tabpanel">
                 <div>
-                    <ul id="yourteam" class="list-group" style="min-height: 40vh; overflow-y:hidden; overflow-x: hidden;">
+                    <ul id="yourteam" class="invite-team list-group" style="min-height: 40vh; overflow-y:hidden; overflow-x: hidden;">
                         <li class="list-group-item d-flex justify-content-between align-items-center">Team 1
                             <span class="badge badge-primary badge-pill">4 Players</span>
                             <div>
