hrefing to menu

--- a/startpage.html
+++ b/startpage.html
@@ -22,7 +22,7 @@
       <span></span>
       
       <ul id="menu">
-        <a href="#"><li>Leaderboard</li></a>
+        <a href="leaderboard.html"><li>Leaderboard</li></a>
         <a href="joinplayer.html"><li>Join a Team</li></a>
         <a href="#"><li>Settings</li></a>
         <a href="#" role="button" data-toggle="modal" data-target="#rulesAbout"><li>Help</li></a>
