fixing href menu

--- a/leaderboard.html
+++ b/leaderboard.html
@@ -25,6 +25,8 @@
       <span></span>
 
       <ul id="menu">
+	   <a href="startpage.html"><li>Home</li></a>
+	   
         <a href="leaderboard.html">
           <li>Leaderboard</li>
         </a>
