--- a/startpage.html
+++ b/startpage.html
@@ -22,6 +22,7 @@
       <span></span>
       
       <ul id="menu">
+	    <a href="startpage.html"><li>Home</li></a>
         <a href="leaderboard.html"><li>Leaderboard</li></a>
         <a href="joinplayer.html"><li>Join a Team</li></a>
         <a href="#"><li>Settings</li></a>
