active link color on menu

--- a/joinplayer.html
+++ b/joinplayer.html
@@ -37,7 +37,7 @@ body {
                 <li>Leaderboard</li>
             </a>
             <a href="#">
-                <li>Join a Team</li>
+                <li class="active">Join a Team</li>
             </a>
             <a href="#">
                 <li>Settings</li>
