--- a/leaderboard.html
+++ b/leaderboard.html
@@ -28,7 +28,7 @@
 	   <a href="startpage.html"><li>Home</li></a>
 	   
         <a href="leaderboard.html">
-          <li>Leaderboard</li>
+          <li class="active">Leaderboard</li>
         </a>
         <a href="joinplayer.html">
           <li>Join a Team</li>
