Fixing border on joinplayer, and improved Quit button

--- a/joinplayer.html
+++ b/joinplayer.html
@@ -51,8 +51,9 @@ body {
         </ul>
     </div>
 </nav>
-<button type="button" class="btn btn-danger mx-auto d-block float-right pull-right"><a href="startpage.html">Quit Game</a></button>
-
+<a href="startpage.html"
+<button type="button" class="btn btn-danger mx-auto d-block float-right pull-right">Quit Game</button>
+</a>
 
 <section class="d-flex align-items-center" style="height: 100vh;">
 
