--- a/startpage.html
+++ b/startpage.html
@@ -62,7 +62,7 @@
                   <form>
                     <div class="form-group">
                       <div class="input-group">
-                      <input type="text" class="col-lg-4 offset-lg-4 form-control" id="teamName" placeholder="Create team">
+                      <input type="text" class="white-border col-lg-4 offset-lg-4 form-control" id="teamName" placeholder="Create team">
                         <div class="input-group-append">
                           <button class="btn btn-success1" id="myBtn" type="submit">Create</button>
                       </div>
