--- a/joinplayer.html
+++ b/joinplayer.html
@@ -62,6 +62,7 @@ body {
           <p class="text-center text-white">Share this code to join the team</p>
           <h3 id="myInput" class="border text-center rounded" onClick="myFunction()">1552142205</h3>
       </div>
+      <div id="demo"></div>
       <br>
 
       <ul class="nav nav-tabs nav-justified" role="tablist">
@@ -201,7 +202,7 @@ body {
 </div>
 
 <script src="JS/script.js"></script>
-
+<script src="JS/createTeam.js"></script> 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
     crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
